scanner positions.  These are 145 patches with identical
row counts to Tregenza, but starting from a different
azimuth and reversing row directions at adjacent altitudes.

Added optimization for long argument lists and arrays in
the calcomp routines used for rendering and in rcalc, etc.

Added error estimate spreading to ambient super-sampling
algorithm (-as) to improve performance especially in
scenes with sharp cut-offs.

Added -i option to gendaymtx to match -i option of gendaylit.
Thanks to Yongqing for initial implementation.

Changed rcrop so negative #rows or #cols counts back from end.

Added rcomb -n option for multi-processing of very large matrices.

Made it so rsplit and rlam can handle any number of input files
up to active open file descriptor limit.

Taoning Wang added genssky tool for generating spectral sky
descriptions.

Taoning added gensdaymtx utility based on gendaymtx, and
added epw2wea -a option to include required information.

Fixed bug introduced in Auguest 2022 (5.4 release) in distant
light source sampling, which caused aiming failures.  (Thanks
to Mike DiPompeo of LightStanza for reporting the issue.)

Added rxpict rendering tool based on C++ RpictSimulManager class.
Multi-processing and spectral output are supported.

Added crude ability to read and convert spectra to RGB in ximage,
ra_bmp, and ra_rgbe programs.  Also updated fast tone-mapping
library to handle spectral HSR inputs at the same time.  HSR
input handling was added in a similar fashion to pcond and pvalue.

Wrote rxpiece tool that will render pictures using tiling and
can handle different output formats and hyperspectral pictures.
Only runs on a single machine, however -- now NFS locking on
shared volumes.  Mainly a demonstration tool for RpictSimulManager
C++ class, but may have its uses.

Fixed a bug in BSDF sampling of sources pointed out by
David Geisler-Moroder, which tended to overestimate specular
contributions for some BSDFs.