@@ -1,4 +1,4 @@
-.\" RCSid "$Id: pextrem.1,v 1.3 2022/02/04 20:11:48 greg Exp $"
+.\" RCSid "$Id: pextrem.1,v 1.4 2024/09/20 17:39:12 greg Exp $"
 .TH PEXTREM 1 11/15/93 RADIANCE
 .SH NAME
 pextrem - find minimum and maximum values in RADIANCE picture
@@ -33,9 +33,7 @@ is specified, when watts/sr/meter^2 are always reported.
 If no input 
 .I picture
 is given, the standard input is read.
-.SH AUTHOR
-Greg Ward
-.SH BUGS
+.SH NOTES
 The luminance value is used for comparison of pixels, although in
 certain anomolous cases (ie. highly saturated colors) it is possible that
 .I pextrem
@@ -43,6 +41,11 @@ will not pick the absolute minimum or maximum luminance value.
 This is because a fast integer-space comparison is used.
 A more reliable floating-point comparison would be slower by
 an order of magnitude.
+.PP
+Hyperspectral pictures report min/max values as RGB colors for
+output consistency.
+.SH AUTHOR
+Greg Ward
 .SH "SEE ALSO"
 falsecolor(1), getinfo(1), pcomb(1), pcompos(1), pextrem(1), pfilt(1),
 pflip(1), protate(1), psign(1), rpict(1), ximage(1)
